# libvmod-encoding

./: CHANGES.rst  README.rst  configure.ac
src/: Makefile.am  base64.c  urlcode.c  urlcode.h  vmod_encoding.c  vmod_encoding.vcc
src/fuzzer/: run-base64  run-urlcode
src/tests/: 01-url.vtc  02-b64.vtc  test01.vtc
